--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -25,9 +25,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">Our Philosophy</h1>
+						<h1 class="text-light">FAB Philosophy</h1>
 						<p class="lead">
-							At Foot and Ball Academy, we believe our approach to coaching sets us apart. 
+							At Foot and Ball Academy, we believe our approach to coaching sets us apart.
+						</p>
+						<p class="lead">
 							It all starts with the clear definition and understanding of the popularised term 'player development.'
 						</p>
 					</div>
@@ -41,224 +43,128 @@
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 col-md-6  align-self-center">
+				<div class="col-lg-6 col-md-6 align-self-center">
 					<h2 class="text-dark">Player Development</h2>
 					<p class="lead">
-					This term gets deployed in the grassroots space... a lot. Typically, it’s an excuse to get all the ‘best’ local players together in a super team and ‘win’ things, that’s about it. 
+						This word gets deployed in the grassroots space... a lot. Typically, it’s an excuse to get all the ‘best’ local players together in a super team and ‘win’ things, that’s about it.
 					</p>
-
 					<p class="lead">
-					Let’s break down the Academy interpretations of Player development and how it SHOULD express itself: 
+						Let’s break down the Academy interpretations of Player development and how it SHOULD express itself:
 					</p>
-
-				</div>
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/stock8.jpg" class="img-fluid">
+					<ol class="lead" style="text-align:left; margin-left:1.25rem;">
+						<li><b>Experimentation</b> during the game different moments introduce new challenges and allows a player to test new ideas.</li>
+						<li>Through <b>trial and error</b>, a player can discover what works and what doesn’t work.</li>
+						<li>This discovery fuels <b>improvement</b> – refining the process, idea, or player.</li>
+						<li>These improvements are the building blocks of personal <b>development</b>.</li>
+						<li>This <b>process repeats</b>: as a player develops it opens the door to step (1) continued experimentation.</li>
+					</ol>
+					<p class="lead">
+						<b>The essence of player development is player mistakes.</b> Without mistakes the iterative cycle of trial and error cannot fulfill itself. Without mistakes coaches cannot correct and guide. Without mistakes players remain stagnant, never evolving into better players.
+					</p>
+					<p class="lead">
+						Summary: Develop: grow or enhance → Growth requires improvement → Improvement often comes from experimentation → experimentation involves trial and error → trial and error leads to insights → Insights lead to further development.
+					</p>
+					<p class="lead">
+						Figure 1: The lifecycle of a youth player’s development. To develop one must risk experimentation of the ball during a game and glean insight into their mistakes to improve. See text for detail.
+					</p>
+					<p class="lead">
+						For this reason, our Academy is very conscious of building a playing environment that incentives the player to take risks on the ball during the game and test themselves without losing confidence or garnering a resentment to such a task.
+					</p>
+					<p class="lead">
+						How do we do that?
+					</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- About Info Section End -->
+	<!-- Info Section End -->
 
-	<!-- About Section Start -->
-	<section id="about" class="text-center py-5 text-light">
-		<div class="inner-overlay">
-			<div class="container">
-				<div class="row">
-					<div class="col mt-5 pt-4">
-						<h1 class="text-light">Who can join?</h1>
-						<p class="lead">
-							We warmly <u>welcome everyone!</u> From first-timers to those with some years of
-							experience. However, <strong>we do not tolerate bad attitude, arrogant, lazy, or casual players.</strong> 
-							At Foot and Ball Academy self-improvement is a player’s primary challenge.
-						<p class="lead">
-							<em>“How good your child was yesterday is yesterday’s achievement. Not today's.” - Coach Nick </em></p>
-
-						</p>
-					</div>
+	<!-- Academy Football Environment Section Start -->
+	<section id="academy-environment" class="py-5 my-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<h2 class="text-dark">Academy Football Environment</h2>
+					<p class="lead">
+						Based on our understanding of player development defined above we want to recreate a ‘risk-free’ player-focused environment when it comes to playing. Below are the following boundaries we put in place that best aids in such an environment:
+					</p>
+					<ol class="lead" style="text-align:left; margin-left:1.25rem;">
+						<li>Immediately recover from perceived ‘mistakes.’ The essence of the Academy.</li>
+						<li>No winning or losing. No leagues, no ladders, no accolades, no ranks.</li>
+						<li>No teams. Players rotate all the time.</li>
+						<li>No clearances whatsoever. If a player boots the ball for any reason, especially strategic = penalty against them or their team.</li>
+						<li>Always pressure the opponent, never stand off (unless instructed to). Always putting pressure on the ball. Get involved.</li>
+						<li>No running back to the goal to ‘pretend’ to goal keep. Very common amongst little kids to run back towards their goal when out of possession. No. No. No.</li>
+						<li>Maximum coaching recognition, praise and celebration for trial-and-error efforts on the ball and throughout the game.</li>
+						<li>100% effort, all the time. Unless sick or injured.</li>
+					</ol>
+					<p class="lead">
+						We have observed a marked difference in the confidence, genuine enjoyment and appreciation of playing from more than enough players attending our Academy to take pride in this environment. The number of parents that have approached us to-date with the statement: “my child plays their best football all week at these Academy games” further lends support to our coaching model.
+					</p>
+					<p class="lead">
+						Remember: We argue the essence of any ‘development’ model is in-game playing mistakes. Therefore, the playing environment must be one that promotes the excessive occurrence of them!
+					</p>
+					<p class="lead">
+						Now, what does an Academy session look like?
+					</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- About Section End -->
+	<!-- Academy Football Environment Section End -->
 
-	<!-- Info Section Start -->
-	<section id="about-info" class="py-5 my-5">
+	<!-- Session Design and Dynamics Section Start -->
+	<section id="session-design" class="py-5 my-5">
 		<div class="container">
 			<div class="row">
-
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/stock7.jpg" class="img-fluid">
-				</div>
-
-				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1 class="text-dark">The Technical Component</h1>
-					<h3 class="text-dark">'Toolbox' Concept.</h3>
+				<div class="col-12">
+					<h2 class="text-dark">Session design and dynamics</h2>
 					<p class="lead">
-						We help players understand they want to build a strong technical ‘toolbox,’ using each 'allowable' part of their
-						body e.g., feet, thighs, chest, when playing football. These can be thought of as ‘tools’ to help the player control, as well as manipulate the ball.
-						This incentivises them to develop as many ‘tools’ as possible, helping to problem solve during a
-						game e.g. successfully passing a defender. For example, outside left foot, inside left foot, laces of the left foot, soul, or studs of the left
-						foot. Alone, that is four tools from just one foot!
+						Without listing the numerous references, you can find online, there appears to be two primary schools of thought on the approach to grassroots youth development in football.
 					</p>
-
-				</div>
-
-				<div class="row">
-
-					<div class="col-lg-6 col-md-6 align-self-center text-center">
-						<img src="img/stock9.jpg" class="img-fluid ">
-					</div>
-
-					<div class="col-lg-6 col-md-6  align-self-center">
-						<h2 class="text-dark">Session Guidelines</h2>
-						<p class="lead">As a brand-new Academy, we take session structure and participation seriously. 
-							At a minimum, if the player absorbs nothing else they will learn that a session has three primary components.
-							Below is a guideline for most** sessions for players U6's and above:</p>
-
-						<h3 class="text-dark">The Warmup:</h3>
-						<p class="lead">
-							Imperative. The "warm up" is becoming a hot topic amongst medical professionals. A way of greatly reducing injury in the long-term. 
-							The warmup is designed to teach our young players to 'talk to their bodies.' Prepare them for what's coming (training). 
-							We focus on getting the players active and excited, ready to digest the core message of the
-							session
-.</p>
-						<p>
-							Duration: ~15 minutes
-						</p>
-
-						<h3 class="text-dark">Fast Feet:</h3>
-						<p class="lead">
-							If there is time, this portion of the session is designed to improve the fast feet response of a player as well as their <strong> balance</strong>. Unopposed
-							coordination work. This section does not last long but gets the heart rate up! It involves popular
-							tools such as the agility ladder, fast feet through cones, and short sprints (less than 5 m).</p>
-						<p>
-							Duration: ~5-10 minutes
-						</p>
-
-						<h3 class="text-dark">Session theme:</h3>
-						<p class="lead">
-							Is the focus of the week: passing? Dribbling? Defending? Possession? Whatever it may be this
-							segment of the session delivers an engaging, inclusive set of exercises designed to drive home the key
-							message of that week’s focus.</p>
-						<p>
-							Duration: ~15-20 minutes
-						</p>
-
-						<h3 class="text-dark">The 'ending':</h3>
-						<p class="lead">
-							If there is time we like to finish with small-sided games, ideally 1 v 1 duels with small goals. Our Academy rules include: no long shots or clearances allowed. 
-							Nor, any Goalkeepers. This concluding aspect of a session allows the players to express themselves and the ideas they have
-							learnt or have been learning over previous sessions in a game-like environment. There are no scorelines kept. 
-							The purpose of the duel is to allow the player access to
-							something resembling a real game, without the added pressure. The desired outcome is
-							improvement where it matters most, playing!</p>
-						<p>
-							Duration: always the remainder of a session!
-						</p>
-						<p>**note: This session guideline is subject to variation, deviation and change if the coach deems it
-							necessary.</p>
-
-					</div>
-
-				</div>
-			</div>
-	</section>
-	<!-- About Info Section End -->
-
-	<!-- Info Section Start -->
-	<section id="about-info" class="py-5 my-5">
-		<div class="container">
-			<div class="row">
-
-
-
-				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1 class="text-dark">The Mental Component</h1>
+					<ol class="lead" style="text-align:left; margin-left:1.25rem;">
+						<li>It all starts with the player and the ball. Develop the player technically with the ball, improve the player in the game, and subsequently the team improves.</li>
+						<li>It all starts with the player and their “thoughts” of the ball. Precisely, there is a quick ‘decision’ before the player acts on the ball. Therefore, developing the players decision-making skills ultimately improves the player and subsequently the team.</li>
+					</ol>
 					<p class="lead">
-						Often overlooked by society, a sustainable mindset towards playing football is a crucial component
-						of our philosophy at Foot and Ball Academy. That is:
+						In our experience the two different approaches necessitate two unique session designs.
 					</p>
 					<p class="lead">
-						<em>“First and foremost, calmness and composure on the ball.” - Coach Nick</em></p>
+						If you are seeking out the short of our philosophy: we focus on both approaches until a discretionary point, at which time, we switch solely to approach 2 i.e. decision-making.
+					</p>
 					<p class="lead">
-					Too often kids’ games are overrun by an over enthusiastic crowd, creating a stressful environment,
-						and thus a very subtle, game-related ‘panic’ from the young players. </p>
+						We now realise this is the definitive skill to refine within a player, everything else is technique. To build competence of a skill such as decision-making during a game takes far longer and far more nuanced coaching effort compared to improving a player’s technique on the ball.
+					</p>
 					<p class="lead">
-						<em>“Panic is a young player’s first hurdle to overcome in football.” - Coach Nick</em></p>
+						How would the two styles express themselves differently in our sessions?
+					</p>
 					<p class="lead">
-					This very mild ‘panic’ typically expresses itself in subtle ways. Not obvious to the inexperienced.
-						Examples include:</p>
-
+						Currently, adopting approach (1), i.e. improving-the-player-on-the-ball session looks like:
+					</p>
+					<ul class="lead" style="text-align:left; margin-left:1.25rem;">
+						<li>50% unopposed ‘dry training.’ i.e. drills and exercises designed with repartition of technique.</li>
+						<li>50% opposed 1v1, 2v1, and 2v2 duels.</li>
+					</ul>
 					<p class="lead">
-					<ol type="1">
-						<li>Hiding from the ball during the game.</li>
-						<li>Suddenly kicking the ball away at the sound of the crowd yelling.</li>
-						<li>Overwhelmed when under pressure from an opponent and kicking the ball away.</li>
-						<li>Easily distracted during a game.</li>
-					</ol></p>
-
-					<p class="lead">	
-					The primary approach we use to overcome this is a simple ideological substitution. We replace the
-						concept of <em>winning</em> with that of <em>improving</em>. By doing this, we alter the players mental
-						incentives
-						when playing. With no leagues or ladders or tables, the player is freed up to focus on their personal
-						player improvement.</p>
-
-					<p>**note: we regularly keep scorelines of activities, exercises, and little games throughout a session.
-						Scores are not recorded or kept beyond that segment of the session. They are not celebrated at the
-						end of it, either. Rather they are used as a gentle, subtle reminder that the goal of the game, long-
-						term, is to score.</p>
-
-				</div>
-
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/stock4.jpg" class="img-fluid">
-				</div>
-
-				<div class="row">
-
-					<div class="col-lg-6 col-md-6 align-self-center text-center">
-						<img src="img/stock5.jpg" class="img-fluid">
-					</div>
-
-					<div class="col-lg-6 col-md-6  align-self-center">
-						<h1 class="text-dark">Time</h1>
-						<p class="lead">There is ongoing debate over the best approach to developing young players in Australia. One
-							aspect
-							of the debate that is often neglected is the importance of valuing time.</p>
-
-						<p class="lead">
-							It is undeniable, one of the lures of the World’s game is its ‘tricky’ nature. The challenges of football
-							can only be mastered by one who aims to play with confidence, calmness, and a healthy sense of
-							freedom on the field. For that reason, lots of time is required to give young players every chance to
-							improve themselves to a level they feel resembles that, with the aim of making the dynamism and
-							challenges of the game more enjoyable later in life.
-						</p>
-
-						<p class="lead">
-							At Foot and Ball Academy, respecting the value of time is a foundation of our teaching philosophy.
-							Too often, time is wasted, leading to bad habits. From arriving late to sessions, to the hasty
-							introduction of in-game management e.g., kicking the ball out under “pressure.” For this reason, we
-							not only stress the importance of punctually, but that every player always feels encouraged to make
-							constructive mistakes during a session. i.e., taking risk over ‘safe play.’
-						</p>
-
-						<p class="lead"><em>“I would rather see a young player try something they just learnt, make a mistake with it, and
-								concede a goal, versus panicking, then booting the ball away, whilst feeling that sense of strategic
-								safety. It’s too young for any of that. Leave strategy for later in their life.” - Coach Nick</em></p>
-
-					</div>
-
+						The very small-sided duels allow for maximum responsibility on the player. This is fastest way for them to get involved and get numerous moments on the ball. The idea is the 30 minutes of dry training introduces enough muscle memory in the player that they understand ball manipulation then it becomes about expressing that under pressure. Which pressure? The opponent.
+					</p>
+					<p class="lead">
+						Adopting approach (2), i.e. improving-the-players-decision-making session looks like:
+					</p>
+					<ul class="lead" style="text-align:left; margin-left:1.25rem;">
+						<li>Games-only orientated sessions. Escalation in difficulty up until a final game, replicating the actual game ends the session.</li>
+						<li>Key concepts are covered in a rotational manner across the week for each session. These include Attacking principles, defending principles, possession principles, duels, and shielding.</li>
+						<li>Through each of these games nights we explore on of these major themes and within it heavily focus on the decision-making components that contribute to executing these principles live in play.</li>
+					</ul>
 				</div>
 			</div>
+		</div>
 	</section>
-	<!-- About Info Section End -->
-
+	<!-- Session Design and Dynamics Section End -->
 
 	<!-- Footer Section Start -->
 	<div id="foot-placeholder"></div>
-	<!-- Footer Section Start -->
+	<!-- Footer Section End -->
 
 	<script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
