--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -15,10 +15,12 @@
     p {
       margin-bottom: 1rem;
     }
+
     /* Increase line height for readability */
     body {
       line-height: 1.6;
     }
+
     /* Style blockquotes */
     blockquote {
       background-color: #d1ecf1;
@@ -29,11 +31,13 @@
       color: #0c5460;
       border-radius: 5px;
     }
+
     /* List indentation */
     ol {
       padding-left: 1.5rem;
       margin-bottom: 1rem;
     }
+
     /* Section card style */
     .section-card {
       background: #fff;
@@ -42,8 +46,11 @@
       margin-bottom: 3rem;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
+
     /* Section heading spacing */
-    h1, h2, h3 {
+    h1,
+    h2,
+    h3 {
       margin-top: 1.5rem;
       margin-bottom: 1rem;
     }
@@ -65,96 +72,139 @@
     </div>
   </section>
 
-  <!-- Accordion for main sections -->
+  <!-- Accordion Section -->
   <section id="main-accordion" class="py-5">
     <div class="container">
-      <div class="accordion" id="academyAccordion">
+      <div id="academyAccordion" role="tablist">
 
         <!-- Player Development -->
-        <div class="accordion-item section-card">
-          <h2 class="accordion-header" id="headingPlayerDev">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePlayerDev" aria-expanded="true" aria-controls="collapsePlayerDev">
-              Player Development
-            </button>
-          </h2>
-          <div id="collapsePlayerDev" class="accordion-collapse collapse show" aria-labelledby="headingPlayerDev" data-bs-parent="#academyAccordion">
-            <div class="accordion-body">
-              <p>This word gets deployed in the grassroots space... a lot. Typically, it’s an excuse to get all the ‘best’ local players together in a super team and ‘win’ things, that’s about it.</p>
+        <div class="card section-card mb-3">
+          <div class="card-header" role="tab" id="headingPlayerDev">
+            <h5 class="mb-0">
+              <a data-toggle="collapse" href="#collapsePlayerDev" aria-expanded="true" aria-controls="collapsePlayerDev">
+                Player Development
+              </a>
+            </h5>
+          </div>
+          <div id="collapsePlayerDev" class="collapse show" role="tabpanel" aria-labelledby="headingPlayerDev"
+            data-parent="#academyAccordion">
+            <div class="card-body">
+              <p>This word gets deployed in the grassroots space... a lot. Typically, it’s an excuse to get all the
+                ‘best’ local players together in a super team and ‘win’ things, that’s about it.</p>
               <p>Let’s break down the Academy interpretations of Player development and how it SHOULD express itself:</p>
               <ol>
-                <li><b>Experimentation</b> during the game different moments introduce new challenges and allows a player to test new ideas.</li>
+                <li><b>Experimentation</b> during the game different moments introduce new challenges and allows a player to
+                  test new ideas.</li>
                 <li>Through <b>trial and error</b>, a player can discover what works and what doesn’t work.</li>
                 <li>This discovery fuels <b>improvement</b> – refining the process, idea, or player.</li>
                 <li>These improvements are the building blocks of personal <b>development</b>.</li>
                 <li>This <b>process repeats</b>: as a player develops it opens the door to step (1) continued experimentation.</li>
               </ol>
               <blockquote>
-                <b>The essence of player development is player mistakes.</b> Without mistakes the iterative cycle of trial and error cannot fulfill itself. Without mistakes coaches cannot correct and guide. Without mistakes players remain stagnant, never evolving into better players.
+                <b>The essence of player development is player mistakes.</b> Without mistakes the iterative cycle of trial and
+                error cannot fulfill itself. Without mistakes coaches cannot correct and guide. Without mistakes players remain
+                stagnant, never evolving into better players.
               </blockquote>
-              <p>Summary: Develop: grow or enhance &rarr; Growth requires improvement &rarr; Improvement often comes from experimentation &rarr; experimentation involves trial and error &rarr; trial and error leads to insights &rarr; Insights lead to further development.</p>
-              <p>Figure 1: The lifecycle of a youth player’s development. To develop one must risk experimentation of the ball during a game and glean insight into their mistakes to improve. See text for detail.</p>
-              <p>For this reason, our Academy is very conscious of building a playing environment that incentives the player to take risks on the ball during the game and test themselves without losing confidence or garnering a resentment to such a task.</p>
+              <p>Summary: Develop: grow or enhance &rarr; Growth requires improvement &rarr; Improvement often comes from
+                experimentation &rarr; experimentation involves trial and error &rarr; trial and error leads to insights &rarr;
+                Insights lead to further development.</p>
+              <p>Figure 1: The lifecycle of a youth player’s development. To develop one must risk experimentation of the ball
+                during a game and glean insight into their mistakes to improve. See text for detail.</p>
+              <p>For this reason, our Academy is very conscious of building a playing environment that incentives the player to
+                take risks on the ball during the game and test themselves without losing confidence or garnering a resentment
+                to such a task.</p>
               <p>How do we do that?</p>
             </div>
           </div>
         </div>
 
         <!-- Academy Football Environment -->
-        <div class="accordion-item section-card">
-          <h2 class="accordion-header" id="headingEnvironment">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEnvironment" aria-expanded="false" aria-controls="collapseEnvironment">
-              Academy Football Environment
-            </button>
-          </h2>
-          <div id="collapseEnvironment" class="accordion-collapse collapse" aria-labelledby="headingEnvironment" data-bs-parent="#academyAccordion">
-            <div class="accordion-body">
-              <p>Based on our understanding of player development defined above we want to recreate a ‘risk-free’ player-focused environment when it comes to playing. Below are the following boundaries we put in place that best aids in such an environment:</p>
+        <div class="card section-card mb-3">
+          <div class="card-header" role="tab" id="headingEnvironment">
+            <h5 class="mb-0">
+              <a class="collapsed" data-toggle="collapse" href="#collapseEnvironment" aria-expanded="false"
+                aria-controls="collapseEnvironment">
+                Academy Football Environment
+              </a>
+            </h5>
+          </div>
+          <div id="collapseEnvironment" class="collapse" role="tabpanel" aria-labelledby="headingEnvironment"
+            data-parent="#academyAccordion">
+            <div class="card-body">
+              <p>Based on our understanding of player development defined above we want to recreate a ‘risk-free’ player-focused
+                environment when it comes to playing. Below are the following boundaries we put in place that best aids in such
+                an environment:</p>
               <ol>
                 <li>Immediately recover from perceived ‘mistakes.’ The essence of the Academy.</li>
                 <li>No winning or losing. No leagues, no ladders, no accolades, no ranks.</li>
                 <li>No teams. Players rotate all the time.</li>
-                <li>No clearances whatsoever. If a player boots the ball for any reason, especially strategic = penalty against them or their team.</li>
-                <li>Always pressure the opponent, never stand off (unless instructed to). Always putting pressure on the ball. Get involved.</li>
-                <li>No running back to the goal to ‘pretend’ to goal keep. Very common amongst little kids to run back towards their goal when out of possession. No. No. No.</li>
-                <li>Maximum coaching recognition, praise and celebration for trial-and-error efforts on the ball and throughout the game.</li>
+                <li>No clearances whatsoever. If a player boots the ball for any reason, especially strategic = penalty against
+                  them or their team.</li>
+                <li>Always pressure the opponent, never stand off (unless instructed to). Always putting pressure on the ball.
+                  Get involved.</li>
+                <li>No running back to the goal to ‘pretend’ to goal keep. Very common amongst little kids to run back towards
+                  their goal when out of possession. No. No. No.</li>
+                <li>Maximum coaching recognition, praise and celebration for trial-and-error efforts on the ball and throughout
+                  the game.</li>
                 <li>100% effort, all the time. Unless sick or injured.</li>
               </ol>
-              <p>We have observed a marked difference in the confidence, genuine enjoyment and appreciation of playing from more than enough players attending our Academy to take pride in this environment. The number of parents that have approached us to-date with the statement: “my child plays their best football all week at these Academy games” further lends support to our coaching model.</p>
-              <p>Remember: We argue the essence of any ‘development’ model is in-game playing mistakes. Therefore, the playing environment must be one that promotes the excessive occurrence of them!</p>
+              <p>We have observed a marked difference in the confidence, genuine enjoyment and appreciation of playing from
+                more than enough players attending our Academy to take pride in this environment. The number of parents that
+                have approached us to-date with the statement: “my child plays their best football all week at these Academy games”
+                further lends support to our coaching model.</p>
+              <p>Remember: We argue the essence of any ‘development’ model is in-game playing mistakes. Therefore, the playing
+                environment must be one that promotes the excessive occurrence of them!</p>
               <p>Now, what does an Academy session look like?</p>
             </div>
           </div>
         </div>
 
         <!-- Session Design and Dynamics -->
-        <div class="accordion-item section-card">
-          <h2 class="accordion-header" id="headingSessionDesign">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSessionDesign" aria-expanded="false" aria-controls="collapseSessionDesign">
-              Session Design and Dynamics
-            </button>
-          </h2>
-          <div id="collapseSessionDesign" class="accordion-collapse collapse" aria-labelledby="headingSessionDesign" data-bs-parent="#academyAccordion">
-            <div class="accordion-body">
-              <p>Without listing the numerous references, you can find online, there appears to be two primary schools of thought on the approach to grassroots youth development in football.</p>
+        <div class="card section-card mb-3">
+          <div class="card-header" role="tab" id="headingSessionDesign">
+            <h5 class="mb-0">
+              <a class="collapsed" data-toggle="collapse" href="#collapseSessionDesign" aria-expanded="false"
+                aria-controls="collapseSessionDesign">
+                Session Design and Dynamics
+              </a>
+            </h5>
+          </div>
+          <div id="collapseSessionDesign" class="collapse" role="tabpanel" aria-labelledby="headingSessionDesign"
+            data-parent="#academyAccordion">
+            <div class="card-body">
+              <p>Without listing the numerous references, you can find online, there appears to be two primary schools of
+                thought on the approach to grassroots youth development in football.</p>
               <ol>
-                <li>It all starts with the player and the ball. Develop the player technically with the ball, improve the player in the game, and subsequently the team improves.</li>
-                <li>It all starts with the player and their “thoughts” of the ball. Precisely, there is a quick ‘decision’ before the player acts on the ball. Therefore, developing the players decision-making skills ultimately improves the player and subsequently the team.</li>
+                <li>It all starts with the player and the ball. Develop the player technically with the ball, improve the player
+                  in the game, and subsequently the team improves.</li>
+                <li>It all starts with the player and their “thoughts” of the ball. Precisely, there is a quick ‘decision’ before
+                  the player acts on the ball. Therefore, developing the players decision-making skills ultimately improves
+                  the player and subsequently the team.</li>
               </ol>
               <p>In our experience the two different approaches necessitate two unique session designs.</p>
-              <p>If you are seeking out the short of our philosophy: we focus on both approaches until a discretionary point, at which time, we switch solely to approach 2 i.e. decision-making.</p>
-              <p>We now realise this is the definitive skill to refine within a player, everything else is technique. To build competence of a skill such as decision-making during a game takes far longer and far more nuanced coaching effort compared to improving a player’s technique on the ball.</p>
+              <p>If you are seeking out the short of our philosophy: we focus on both approaches until a discretionary point,
+                at which time, we switch solely to approach 2 i.e. decision-making.</p>
+              <p>We now realise this is the definitive skill to refine within a player, everything else is technique. To build
+                competence of a skill such as decision-making during a game takes far longer and far more nuanced coaching
+                effort compared to improving a player’s technique on the ball.</p>
               <p>How would the two styles express themselves differently in our sessions?</p>
               <p>Currently, adopting approach (1), i.e. improving-the-player-on-the-ball session looks like:</p>
               <ul>
                 <li>50% unopposed ‘dry training.’ i.e. drills and exercises designed with repartition of technique.</li>
                 <li>50% opposed 1v1, 2v1, and 2v2 duels.</li>
               </ul>
-              <p>The very small-sided duels allow for maximum responsibility on the player. This is fastest way for them to get involved and get numerous moments on the ball. The idea is the 30 minutes of dry training introduces enough muscle memory in the player that they understand ball manipulation then it becomes about expressing that under pressure. Which pressure? The opponent.</p>
+              <p>The very small-sided duels allow for maximum responsibility on the player. This is fastest way for them
+                to get involved and get numerous moments on the ball. The idea is the 30 minutes of dry training introduces
+                enough muscle memory in the player that they understand ball manipulation then it becomes about expressing
+                that under pressure. Which pressure? The opponent.</p>
               <p>Adopting approach (2), i.e. improving-the-players-decision-making session looks like:</p>
               <ul>
-                <li>Games-only orientated sessions. Escalation in difficulty up until a final game, replicating the actual game ends the session.</li>
-                <li>Key concepts are covered in a rotational manner across the week for each session. These include Attacking principles, defending principles, possession principles, duels, and shielding.</li>
-                <li>Through each of these games nights we explore on of these major themes and within it heavily focus on the decision-making components that contribute to executing these principles live in play.</li>
+                <li>Games-only orientated sessions. Escalation in difficulty up until a final game, replicating the actual game
+                  ends the session.</li>
+                <li>Key concepts are covered in a rotational manner across the week for each session. These include Attacking
+                  principles, defending principles, possession principles, duels, and shielding.</li>
+                <li>Through each of these games nights we explore on of these major themes and within it heavily focus on
+                  the decision-making components that contribute to executing these principles live in play.</li>
               </ul>
             </div>
           </div>
