--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -63,14 +63,21 @@
   <div id="nav-placeholder"></div>
   <!-- Nav Section End -->
 
-  <!-- Philosophy Intro Section -->
-  <section id="philosophy-intro" class="text-center py-5 bg-primary text-white">
-    <div class="container section-card">
-      <h1>FAB Philosophy</h1>
-      <p>At Foot and Ball Academy, we believe our approach to coaching sets us apart.</p>
-      <p>It all starts with the clear definition and understanding of the popularised term 'player development.'</p>
-    </div>
-  </section>
+ <!-- Philosophy Intro Section -->
+<section id="philosophy-intro" class="text-center py-5" style="background-color: #f0f4f8;">
+  <div class="container section-card" style="
+    background: rgba(255, 255, 255, 0.85);
+    padding: 2rem 3rem;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    max-width: 700px;
+    margin: 0 auto;">
+    <h1>FAB Philosophy</h1>
+    <p>At Foot and Ball Academy, we believe our approach to coaching sets us apart.</p>
+    <p>It all starts with the clear definition and understanding of the popularised term 'player development.'</p>
+  </div>
+</section>
+
 
   <!-- Accordion Section -->
   <section id="main-accordion" class="py-5">
